Fixed status page card width on smaller screens

--- a/static/styles/status.css
+++ b/static/styles/status.css
@@ -2,8 +2,8 @@
 	display: flex;
 	flex-direction: column;
 	width: 100%;
-	padding: 20px;
-	margin: auto 10px;
+	padding: 20px 10px;
+	margin: auto 15px;
 	max-width: 300px;
 }
 
